/**
 * Space Ship server RPC protocol
 */

syntax = "proto3";

package spaceship.api;

import "google/protobuf/timestamp.proto";

option go_package = "api";

option java_multiple_files = true;
option java_outer_classname = "SpaceShipApi";
option java_package = "tr.com.apps.spaceship.api";

option csharp_namespace = "SpaceShip";

option objc_class_prefix = "SSP";

message AuthenticateFingerprint {
    string fingerprint = 1;
}

message AuthenticateFacebook {
    string fingerprint = 1;
    string token = 2;
}

message User {
    // The id of the user's account.
    string id = 1;
    // The username of the user's account.
    string username = 2;
    // The fingerprint parameter for the user
    string fingerprint = 3;
    // The display name of the user.
    string display_name = 4;
    // A URL for an avatar image.
    string avatar_url = 5;
    // Additional information stored as a JSON object.
    string metadata = 6;
    // The Facebook id in the user's account.
    string facebook_id = 7;
    // Indicates whether the user is currently online.
    bool online = 8;
    // The UNIX time when the user was created.
    google.protobuf.Timestamp create_time = 9;
    // The UNIX time when the user was last updated.
    google.protobuf.Timestamp update_time = 10;
}

message UserUpdate {
    string display_name = 1;
    string avatar = 2;
}

message Session {
    User user = 1;

    string token = 2;
}

message Leaderboard {
    User user = 1;
    int64 score = 2;
}

message LeaderboardRequest {
    string type = 1;
    string mode = 2;
    string page = 3;
}

message LeaderboardResponse {
    repeated Leaderboard items = 1;
    int32 item_count = 2;
    int32 page = 3;
    bool has_next_page = 4;
}
